--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,10 @@
+//colors
+$dark-grey: #333333;
+$blue: #1c88bf;
+
+//font-size
+$font-size-large: 1.8rem;
+
 //spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
